# gen-ai

./: .env.example  README.md  docker-compose.yml  pyproject.toml  requirements.txt
notebooks/: README.md  pgvector-practice.ipynb
sql/: sample_data.sql  schema.sql
src/pgvector_practice/: __init__.py  cli.py  db.py
tests/: test_db.py
